@@ -150,7 +150,20 @@
 
 <admst:text format="\n"/>
 <admst:text format="Element * $module::info(QString&amp; Name, char * &amp;BitmapFile, bool getNewOne)\n"/>
-<admst:text format="{\n  Name = QObject::tr(&quot;$module&quot;);\n  BitmapFile = (char *) &quot;npnsub&quot;;\n"/>
+<admst:text format="{\n  Name = QObject::tr(&quot;$module&quot;);\n"/>
+
+<admst:choose>
+<admst:when test="[$module='hicumL2p1' or $module='hic2_full']">
+<admst:text format="  BitmapFile = (char *) &quot;npnsub&quot;;\n"/>
+</admst:when>
+<admst:when test="[$module='HBT_X']">
+<admst:text format="  BitmapFile = (char *) &quot;npn_therm&quot;;\n"/>
+</admst:when>
+<admst:otherwise>
+<admst:text format="  BitmapFile = (char *) &quot;$module&quot;;\n"/>
+</admst:otherwise>
+</admst:choose>
+
 <admst:text format="\n  if(getNewOne) return new $module();\n  return 0;\n}\n\n"/>
 
 <admst:if test="[$module='hicumL2p1']">
@@ -161,7 +174,8 @@
 </admst:if>
 
 <admst:text format="void $module::createSymbol()\n{"/>
-<admst:if test="[$module='hicumL2p1' or $module='hic2_full' or $module='HBT_X']">
+<admst:choose>
+<admst:when test="[$module='hicumL2p1' or $module='hic2_full' or $module='HBT_X']">
   // normal bipolar
   Lines.append(new Line(-10,-15,-10, 15,QPen(QPen::darkBlue,3)));
   Lines.append(new Line(-30,  0,-10,  0,QPen(QPen::darkBlue,2)));
@@ -197,9 +211,8 @@
   // relative boundings
   x1 = -30; y1 = -30;
   x2 =  30; y2 =  30;
-
-</admst:if>
-<admst:if test="[$module='mosfetbsim4']">
+</admst:when>
+<admst:when test="[$module='mosfetbsim4']">
   // normal mosfet
   Lines.append(new Line(-14,-13,-14, 13,QPen(QPen::darkBlue,3)));
   Lines.append(new Line(-30,  0,-14,  0,QPen(QPen::darkBlue,2)));
@@ -244,9 +257,56 @@
   // relative boundings
   x1 = -30; y1 = -30;
   x2 =  30; y2 =  30;
+</admst:when>
+<admst:when test="[$module='mod_amp' or $module='logamp']">
+  // normal amplifier symbol
+  Lines.append(new Line(-30,-20,-20,-20,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-30, 20,-20, 20,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( 30,  0, 40,  0,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-20,-35,-20, 35,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-20,-35, 30,  0,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-20, 35, 30,  0,QPen(QPen::darkBlue,2)));
 
-</admst:if>
-<admst:text format="}\n"/>
+  // terminal definitions
+  Ports.append(new Port(-30,-20)); // plus
+  Ports.append(new Port(-30, 20)); // minus
+  Ports.append(new Port( 40,  0)); // output
+
+  // relative boundings
+  x1 = -30; y1 = -38;
+  x2 =  30; y2 =  38;
+</admst:when>
+<admst:when test="[$module='diode']">
+  // normal diode
+  Lines.append(new Line(-30,  0, 30,  0,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( -6, -9, -6,  9,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(  6, -9,  6,  9,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( -6,  0,  6, -9,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( -6,  0,  6,  9,QPen(QPen::darkBlue,2)));
+
+  // Schottky
+  if(Props.getLast()->Value.at(0) == 'S') {
+    Lines.append(new Line( -6, -9,-12,-12,QPen(QPen::darkBlue,2)));
+    Lines.append(new Line( -6,  9,  0, 12,QPen(QPen::darkBlue,2)));
+  }
+  // Zener
+  else if(Props.getLast()->Value.at(0) == 'Z') {
+    Lines.append(new Line( -6, 9, -1, 9,QPen(QPen::darkBlue,2)));
+  }
+
+  // terminal definitions
+  Ports.append(new Port(-30, 0)); // cathode
+  Ports.append(new Port( 30, 0)); // anode
+
+  // relative boundings
+  x1 = -30; y1 = -11;
+  x2 =  30; y2 =  11;
+</admst:when>
+<admst:otherwise>
+  // put in here symbol drawing code and terminal definitions
+</admst:otherwise>
+</admst:choose>
+<admst:text format="\n}\n"/>
 </admst:open>
 
 <admst:open file="$module.gui.h">/*
